<resources>
    <string name="app_name">hieutmph10003_ASM_TKGDA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Khoản thu</string>
    <string name="menu_gallery">Khoản chi</string>
    <string name="menu_slideshow">Thống kê</string>
    <string name="menu_gioithieu">Giới thiệu</string>
    <string name="menu_thoat">Thoát</string>

    <string name="home_second">Home Second</string>
</resources>
